@@ -51,9 +51,12 @@
 #endif
 
 // include winsock2.h early to eliminate fd_set warning
-#ifdef __CYGWIN__
-#include <winsock2.h>
-#endif
+// FIXME: including winsock2.h early causes build failures
+// relating to the CreateDialog macro defined in the w32api.
+// Need to find a better point to #include <winsock2.h>
+//#ifdef __CYGWIN__
+//#include <winsock2.h>
+//#endif
 
 #include "wx/wx.h"
 #include "wx/splitter.h"
